tdf#154521 sw Navigator: fix selection change event of bookmark

In Navigator, double click or enter on a bookmark name selects
the bookmark in the text, but the triggered selectionChanged event
didn't give access to the actual selection, but only to the start
of the previous one.

Note: newly enabled Navigator tree item "Bookmarks" is not stateless
on some test platform, so adjust unit tests according to the (now)
unknown index of the requested tree items.

Change-Id: Iade4ea40c524a1eb14737669bb3d21f22b556c76
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149895
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 117b1fcdf94eb7959240c09c544cb6754d8c7b44)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149880
Tested-by: László Németh <nemeth@numbertext.org>