sw/qa/uitest/navigator/tdf149268.py
@@ -13,6 +13,12 @@ from uitest.uihelper.common import get_state_as_dict, get_url_for_data_file
 
 class tdf149268(UITestCase):
 
+    def get_item(self, xTree, name):
+        for i in xTree.getChildren():
+            xItem = xTree.getChild(i)
+            if name == get_state_as_dict(xItem)['Text']:
+                return xItem
+
     def test_tdf149268(self):
         with self.ui_test.load_file(get_url_for_data_file("tdf149268.odt")):
             xWriterDoc = self.xUITest.getTopFocusWindow()
@@ -27,7 +33,7 @@ class tdf149268(UITestCase):
             xNavigatorPanel = self.ui_test.wait_until_child_is_available('NavigatorPanel')
 
             xContentTree = xNavigatorPanel.getChild("contenttree")
-            xHyperlinks = xContentTree.getChild('7')
+            xHyperlinks = self.get_item(xContentTree, 'Hyperlinks')
             self.assertEqual('Hyperlinks', get_state_as_dict(xHyperlinks)['Text'])
 
             xHyperlinks.executeAction("EXPAND", tuple())
